# CUDA-Row-Hammer

./: .gitignore  CMakeLists.txt  README.md  access_cycles_cycles.txt  access_latency_cycles.cu  access_latency_timing  access_latency_timing.cu  access_latency_timing.txt  basic_row_hammer_test  basic_row_hammer_test.cu  ptx_test.cu  reverse_engineering.hpp  row_access_timer  row_access_timer.cu  row_size_tests  row_size_tests.cu
OpenCL_tests/: latency_results.csv  latency_test  latency_test.cpp  latency_test_2  latency_test_2.cpp  plot_latency.py  plot_latency_2.py
dump/: access_latency_cycles  access_latency_timing  access_latency_timing.csv  access_latency_timing.cu  access_latency_timing.txt  access_latency_timing_plot.py  access_times.txt  oc_policy  open_closed_policy_test.cu  plot_access_times.py  ptx_test  row_access_timer
last_attempt_timing/: individual_kernals  individual_kernals.cu  plot_data.py  results.csv
latency_hotspot/: analyze_latencies.py  determine_optimal_k.py  measure_latency  measure_latency.cu  plot_differences.py  plot_latencies.py
pointer-chase/: Makefile  PointerChase.cu
pointer_chase/: Makefile  README.md  pointer_chase.cu
strided_access/: Makefile  README.md  strided_access.cu  strided_access.sass
tests/: dram_read_time_helpers.cu  simple_write_latency  simple_write_latency.cu  simple_write_latency.sass  test_read_latency  test_read_latency.cu  write_latencies.csv  write_latencies_1060.csv  write_latencies_L40s.csv  write_latencies_plot.py
